syntax = "proto3";

option java_multiple_files = true;
option java_package = "DistributedRouting.grpc";
option java_outer_classname = "DistributedRoutingProto";

package grpc;

service Message {
  rpc RunBFS (BFSMessageRequest) returns (BFSMessageReply) {}
  rpc CompleteBFS (BFSDoneRequest) returns (BFSMessageReply) {}
  rpc SendCoupon (CouponMessageRequest) returns (CouponMessageReply) {}
}

service Log {
  rpc CouponLog (CouponLogRequest) returns (StatusReply) {}
  rpc SendLog (MessageLog) returns (StatusReply) {}
  rpc DoneBFSLog (NodeLog) returns (StatusReply) {}
}

message BFSDoneRequest {
  int32 node_id = 1;
}

message NodeLog {
  int32 node_id = 1;
}

message CouponLogRequest {
  int32 node_id = 1;
  repeated CouponMessageRequest coupons = 2;
}

message MessageLog {
  int32 sending_node = 1;
  int32 receiving_node = 2;
}

message MessageRequest {
  int32 node_id = 1;
}

message MessageReply {
  bool success = 1;
}

message StatusReply {
  bool success = 1;
}

message BFSMessageRequest {
  int32 origin_id = 1;
  int32 parent_id = 2;
}

message BFSMessageReply {
  bool success = 1;
}

message CouponMessageRequest {
  bool forward = 1;
  int32 origin_id = 2;
  int32 parent_id = 3;
  int32 current_walk_length = 4;
}

message CouponMessageReply {
  bool success = 1;
}